--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Cafe Menu</title>
   </head>
-  <body></body>
+  <body>
+    <section class="container"></section>
+  </body>
 </html>
