add header main and footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Cafe Menu</title>
   </head>
   <body>
-    <section class="container"></section>
+    <section class="container">
+      <!-- HEADER SECTION -->
+      <header></header>
+
+      <!-- MAIN SECTION -->
+      <main></main>
+
+      <!-- FOOTER SECTION -->
+      <footer></footer>
+    </section>
   </body>
 </html>
