add content in header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
     <section class="container">
       <!-- HEADER SECTION -->
-      <header></header>
+      <header>
+        <div class="head-content">
+          <h1>Camper cafe</h1>
+          <h5>Est. 2023</h5>
+        </div>
+      </header>
 
       <!-- MAIN SECTION -->
       <main></main>
