--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <section class="container">
-      <!-- HEADER SECTION -->
       <header>
         <div class="head-content">
           <h1>Camper cafe</h1>
@@ -16,8 +15,10 @@
         </div>
       </header>
 
-      <!-- MAIN SECTION -->
-      <main></main>
+      <main>
+        <hr />
+        <hr />
+      </main>
 
       <!-- FOOTER SECTION -->
       <footer></footer>
