add coffee name and img

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 
       <main>
         <hr />
+        <!-- COFFEE -->
+        <div class="coffee">
+          <h2>Coffee</h2>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg"
+            alt="Coffee cup"
+          />
+        </div>
+
         <hr />
       </main>
 
