add coffee items and price

--- a/index.html
+++ b/index.html
@@ -26,6 +26,48 @@
           />
         </div>
 
+        <div class="menu">
+          <div class="item-price">
+            <div class="item">
+              <p>French Vanilla</p>
+            </div>
+            <div class="price">
+              <p>3.00</p>
+            </div>
+          </div>
+          <div class="item-price">
+            <div class="item">
+              <p>Caramel Macchiato</p>
+            </div>
+            <div class="price">
+              <p>3.75</p>
+            </div>
+          </div>
+          <div class="item-price">
+            <div class="item">
+              <p>Pumpkin Spice</p>
+            </div>
+            <div class="price">
+              <p>3.50</p>
+            </div>
+          </div>
+          <div class="item-price">
+            <div class="item">
+              <p>Hazelnut</p>
+            </div>
+            <div class="price">
+              <p>4.00</p>
+            </div>
+          </div>
+          <div class="item-price">
+            <div class="item">
+              <p>Mocha</p>
+            </div>
+            <div class="price">
+              <p>4.50</p>
+            </div>
+          </div>
+        </div>
         <hr />
       </main>
 
