add desserts text and img

--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
             </div>
           </div>
         </div>
+
+        <!-- DESSERTS -->
+        <div class="desserts">
+          <h2>Desserts</h2>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg"
+            alt="Desserts"
+          />
+        </div>
+
         <hr />
       </main>
 
