add dessert items and price

--- a/index.html
+++ b/index.html
@@ -78,6 +78,40 @@
           />
         </div>
 
+        <div class="menu">
+          <div class="item-price">
+            <div class="item">
+              <p>Donut</p>
+            </div>
+            <div class="price">
+              <p>1.50</p>
+            </div>
+          </div>
+          <div class="item-price">
+            <div class="item">
+              <p>Cherry Pie</p>
+            </div>
+            <div class="price">
+              <p>2.75</p>
+            </div>
+          </div>
+          <div class="item-price">
+            <div class="item">
+              <p>CheeseCake</p>
+            </div>
+            <div class="price">
+              <p>3.00</p>
+            </div>
+          </div>
+          <div class="item-price">
+            <div class="item">
+              <p>Cinnamon Roll</p>
+            </div>
+            <div class="price">
+              <p>2.50</p>
+            </div>
+          </div>
+        </div>
         <hr />
       </main>
 
