add footer contents

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
       </header>
 
+      <!-- MAIN SECTION -->
       <main>
         <hr />
         <!-- COFFEE -->
@@ -116,7 +117,17 @@
       </main>
 
       <!-- FOOTER SECTION -->
-      <footer></footer>
+      <footer>
+        <div class="copyrights">
+          <a
+            href="https://www.freecodecamp.org/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Visit our website</a
+          >
+          <p>123 Free Code Camp Drive</p>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
