change section to div

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Cafe Menu</title>
   </head>
   <body>
-    <section class="container">
+    <div class="container">
       <header>
         <div class="head-content">
           <h1>Camper cafe</h1>
@@ -128,6 +128,6 @@
           <p>123 Free Code Camp Drive</p>
         </div>
       </footer>
-    </section>
+    </div>
   </body>
 </html>
