change h5 tag to p tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header>
         <div class="head-content">
           <h1>Camper cafe</h1>
-          <h5>Est. 2023</h5>
+          <p>Est. 2023</p>
         </div>
       </header>
 
