change class name menu name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <main>
         <hr />
         <!-- COFFEE -->
-        <div class="coffee">
+        <div class="menu-name">
           <h2>Coffee</h2>
           <img
             src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg"
@@ -71,7 +71,7 @@
         </div>
 
         <!-- DESSERTS -->
-        <div class="desserts">
+        <div class="menu-name">
           <h2>Desserts</h2>
           <img
             src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg"
