add class to last dish in menu

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <p>3.00</p>
             </div>
           </div>
-          <div class="item-price">
+          <div class="item-price mb-b">
             <div class="item">
               <p>Cinnamon Roll</p>
             </div>
